<resources>
    <string name="app_name">HealthcareApp</string>
    <string name="facebook_app_id">911478286828834</string>
    <string name="fb_login_protocol_scheme">fb911478286828834</string>
    <string name="facebook_client_token">93696f2f3e0e88a386d56b07513c32b0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editprofile">Edit Profile</string>
    <string name="mygoals">My goals</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>
    <string name="darkmode">Dark Mode</string>
    <string name="logout">Log out</string>
    <string name="changeGoal">Change goal</string>
    <string name="addpostbutton">What did you eat today? Share it to everyone</string>
    <string name="createnewP">Create new post</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="step1">Step1. Something about food</string>
    <string name="foodname">Food name *</string>
    <string name="difficult">Difficult *</string>
    <string name="foodname2">Food name:</string>
    <string name="difficult2">Difficult:</string>
    <string name="total">Total: *</string>
    <string name="calories">Calories: *</string>
    <string name="preptime">Prep time: *</string>
    <string name="cookingtime">Cooking time: *</string>
    <string name="step2">Step2. How to make food? </string>
    <string name="ingredient">What ingredients are there? *</string>
    <string name="Recipe">Give me the recipe of your food *</string>
    <string name="summary">Do you want to say something?</string>
    <string name="step3">Step3. Choose hashtags</string>
    <string name="mealtype">Meal type</string>
    <string name="cookingstyle">Cooking style</string>
    <string name="course">Course</string>
    <string name="mainIn">Main Ingredient</string>
    <string name="diettype">Diet Type</string>
    <string name="addimg">Add photos you like</string>
    <string name="thongbao">Notification</string>
    <string name="read">Privious notifications</string>
    <string name="noread">New</string>
    <string name="findpost">Find posts, friends you want</string>
    <string name="frienduknow">Friends you know:</string>
    <string name="baiviet">Posts</string>
    <string name="moinguoi">People</string>
    <string name="addnewfood"> Add New Food</string>
    <string name="chooseIn">Choose Ingredient:</string>
    <string name="quantity">Quantity of ingredient:</string>
    <string name="tiep">Next</string>
    <string name="nameofnewfood">Name of new food</string>
    <string name="addIn">Add Ingredient</string>
    <string name="savefood">Save food</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="sex">Sex</string>
    <string name="goal">Goal: </string>
    <string name="weeklygoal">Weekly goal: </string>
    <string name="activitylevel">Activity level: </string>
    <string name="comment">Comments</string>
    <string name="reset">Reset</string>
    <string name="forgotpass">Forgot password</string>
    <string name="resetpass">We\'ll email you a code to reset your password.</string>
    <string name="emailaddress">Email address</string>
    <string name="sendmenoti">Send me a push notification when:</string>
    <string name="sofollow">Someone starts following me</string>
    <string name="solike">Someone likes my post</string>
    <string name="socomment">Someone comments on my post</string>
    <string name="sopost">Someone I\'m following posts a new post</string>
    <string name="today">Today</string>
    <string name="calremain">Calories Remaining</string>
    <string name="add">Add Food/Exercise/Water</string>
    <string name="Add">ADD</string>
    <string name="longtext">Turning push notifications off will prevent you from seeing theses update on your lock screen. Howerver, you will still receive these notifications in-app</string>
    <string name="calofnewfood">Calories of new food</string>
    <string name="servingofnewfood">Serving of new food</string>
    <string name="addfood">Add food</string>
    <string name="addrecipe">Add Recipe</string>
    <string name="listrecipe">List Recipe You Add</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="aboutme">About me</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="saveprofile">Save Profile</string>
    <string name="progress">Progress</string>
    <string name="listnewfoodyouadded"> List New Food You Added </string>
    <string name="addexercise"> Add Exercise</string>
    <string name="RemainingGoalFoodExercire"> Remaining = Goal - Food + Exercire </string>

    <string name="Exercise">Exercise</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Snacks">Snacks</string>
    <string name="remaining">remaining</string>
    <string name="Note">Note</string>
    <string name="YourBMIis">Your BMI is:</string>
    <string name="Water">Water</string>
    <string name="Myanalysis">My Analysis</string>
    <string name="Basegoal">Base goal</string>
    <string name="Today">Today</string>
    <string name="Addfood">Add Food</string>
    <string name="Addexercise">Add Exercise</string>
    <string name="Addwater">Add Water</string>
    <string name="Addrecipe">Add Recipe</string>
    <string name="Goal">Goal</string>
    <string name="Food">Food</string>
    <string name="Remaining">Remaining</string>
    <string name="AddWater">Add Water (ml)</string>


    <string name="yourweight">your weight</string>
    <string name="yourname">your name</string>
    <string name="yourheight">your height</string>
    <string name="writehere">write here</string>

    <string name="whatgoal">What is your goal?</string>
    <string name="seedetail">See detail</string>

    <string name="weightTab">Weight</string>
    <string name="heightTab">Height</string>
    <string name="caloriesTab">Calories burned</string>
    <string name="postsaved"> Saved posts</string>
    <string name="posts">Posts</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="savedmenu">Saved</string>

    <string name="home">Home</string>
    <string name="graph">Graph</string>
    <string name="addBtt">Add</string>
    <string name="blogs">Blogs</string>
    <string name="settings">Settings</string>

    <string-array name="meals">
        <item> Breakfast </item>
        <item> Lunch </item>
        <item> Dinner </item>
        <item> Snack </item>
    </string-array>

    <string-array name="selectMeasurement">
        <item> Weight </item>
        <item> Height </item>
    </string-array>

    <string-array name="selectDateRange">
        <item> 1 week </item>
        <item> 1 month </item>
        <item> 1 year </item>
    </string-array>
    <string-array name="goals">
        <item> Maintain weight </item>
        <item> Gain weight </item>
        <item> Lose weight </item>
    </string-array>
    <string-array name="gain_weeklyGoals">
        <item> Gain 0.25 kg per week </item>
        <item> Gain 0.5 kg per week </item>
        <item> Gain 1 kg per week </item>
    </string-array>
    <string-array name="lose_weeklyGoals">
        <item> Lose 0.25 kg per week </item>
        <item> Lose 0.5 kg per week </item>
        <item> Lose 1 kg per week </item>
    </string-array>
    <string-array name="activityLevels">
        <item> Not very active </item>
        <item> Lightly active </item>
        <item> Moderate </item>
        <item> Active </item>
        <item> Very active </item>
    </string-array>
    <string-array name="sex">
        <item> Male </item>
        <item> Female </item>
    </string-array>
    <string-array name="selectUnit">
        <item> g </item>
        <item> kg </item>
        <item> ml </item>
        <item> l </item>
        <item> cup </item>
        <item> tsp </item>
        <item> tbsp </item>
        <item> piece </item>
        <item> pieces </item>
    </string-array>
    <string-array name="serving">
        <item> 1 cup </item>
        <item> 1 ounce </item>
        <item> 1 slice </item>
    </string-array>
    <string-array name="language">
        <item> Eng </item>
        <item> Vie </item>
    </string-array>

</resources>