<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:background="@color/lightgreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            android:gravity="center"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/forgotpass"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/resetpass"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/emailaddress"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/forminput_bg"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forminput_bg"
        android:layout_margin="20dp"
        android:text="@string/reset"/>
</LinearLayout>