<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment"
    android:padding="10dp"
    android:background="@color/lightgreen"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editprofile"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_edit"
        android:drawablePadding="10dp"
        android:id="@+id/editprofile"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:tint="@color/forestgreen"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mygoals"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_directions_run_24"
        android:drawablePadding="10dp"
        android:id="@+id/mygoals"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:tint="@color/forestgreen"
        android:layout_marginVertical="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_notifications_24"
        android:drawablePadding="10dp"
        android:id="@+id/noti"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:tint="@color/forestgreen"
        android:layout_marginVertical="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_language_24"
            android:drawablePadding="10dp"
            android:id="@+id/language"/>
        <Spinner
            android:id="@+id/langspinner"
            android:layout_width="100dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:entries="@array/language" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:tint="@color/forestgreen"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/darkmode"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_dark_mode_24"
        android:drawablePadding="10dp"
        android:id="@+id/darkmode"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:tint="@color/forestgreen"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_logout_24"
        android:drawablePadding="10dp"
        android:id="@+id/logout"/>


    <Button
        android:id="@+id/changeBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changebmi"
        android:layout_marginTop="100dp"
        />

</LinearLayout>