<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeBmiAndGoal">
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/back"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ic_backview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/changeGoal"
            android:layout_marginLeft="10dp"
            android:textColor="#3D7238"
            android:textSize="33dp"
            android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/activitylevel"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/search_view_bg"
            android:id="@+id/activityLevel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/goal"
        />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/search_view_bg"
            android:id="@+id/goal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">
        <TextView
            android:id="@+id/tv_weeklyGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/weeklygoal"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/search_view_bg"
            android:id="@+id/spn_weeklyGoal"/>
    </LinearLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>
</LinearLayout>