<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F4E6"
    android:orientation="vertical"
    tools:context=".AddWaterActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_backview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddWater"
        android:textSize="20dp"
        android:textColor="@color/forestgreen"
        android:textStyle="bold"
        android:layout_gravity="center|top"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_calories"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:id="@+id/imgCalendar"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/schedule_100px"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Today"
            android:textColor="#fff"
            android:textSize="21dp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/water_"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/water"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:digits="0123456789"
                android:inputType="phone"
                android:background="@drawable/search_view_bg"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>